app/server/deployments/manifest-neg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-neg
  namespace: work-gke-gce
  labels:
    app: server-neg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server-neg
  template:
    metadata:
      labels:
        app: server-neg
    spec:
      containers:
        - name: server-neg
          image: ghcr.io/keisukesakasai/work-cs-model-on-gcp/server:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 100m
              memory: 100Mi                
---
apiVersion: v1
kind: Service
metadata:
  name: server-neg
  annotations:
    cloud.google.com/neg: '{"exposed_ports": {"8080":{"name": "cn-ksakasai-neg"}}}'  
  namespace: work-gke-gce
spec:
  selector:
    app: server-neg
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
