app/server/deployments/manifest-nodeport.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: work-gke-gce
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ghcr.io/keisukesakasai/work-cs-model-on-gcp/server:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 100m
              memory: 100Mi                
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: server
#   namespace: work-gke-gce
# spec:
#   selector:
#     app: server
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: work-gke-gce
spec:
  type: NodePort
  selector:
    app: server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30000  # 30000-32767の範囲で選択
